Colectivos PLP new changes

--- a/colectivos/plp/resources/templates/partials/rates-fiber-mobile.hbs
+++ b/colectivos/plp/resources/templates/partials/rates-fiber-mobile.hbs
@@ -29,12 +29,12 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra300.description.[0].title }}
+                      {{ rates.fiber-mobile.fibra300.description.0.title }}
                     </p>
                     <p
                       class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary"
                     >
-                      {{ rates.fiber-mobile.fibra300.description.[0].subtitle }}
+                      {{ rates.fiber-mobile.fibra300.description.0.subtitle }}
                       <svg
                         class="ws10-c-card-rate__product-txt-icon"
                         xmlns="http://www.w3.org/2000/svg"
@@ -55,10 +55,10 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra300.description.[1].title }}
+                      {{ rates.fiber-mobile.fibra300.description.1.title }}
                     </p>
                     <p class="ws10-c-card-rate__product-txt">
-                      {{ rates.fiber-mobile.fibra300.description.[1].subtitle }}
+                      {{ rates.fiber-mobile.fibra300.description.1.subtitle }}
                     </p>
                   </div>
                 </li>
@@ -77,12 +77,29 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                         <p class="ws10-c-card-rate__product-title">
-                          {{ rates.fiber-mobile.fibra300.description.[2].title }}
+                          {{ rates.fiber-mobile.fibra300.description.2.title }}
                         </p>
                         <p class="ws10-c-card-rate__product-txt">
-                          {{ rates.fiber-mobile.fibra300.description.[2].subtitle }}
+                          {{ rates.fiber-mobile.fibra300.description.2.subtitle }}
                         </p>
                     </div>
+                  </div>
+                </li>
+                <li class="ws10-c-card-rate__product-info-item">
+                  <svg
+                    class="ws10-c-card-rate__product-icon ws10-u-color--black"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <use xlink:href="#icon-tv"></use>
+                  </svg>
+                  <div class="ws10-c-card-rate__product">
+                    <p class="ws10-c-card-rate__product-title">
+                      {{ rates.fiber-mobile.fibra300.description.3.title }}
+                    </p>
+                    <p class="ws10-c-card-rate__product-txt">
+                      {{ rates.fiber-mobile.fibra300.description.3.subtitle }}
+                    </p>
                   </div>
                 </li>
               </ul>
@@ -151,12 +168,12 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra600.description.[0].title }}
+                      {{ rates.fiber-mobile.fibra600.description.0.title }}
                     </p>
                     <p
                       class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary"
                     >
-                      {{ rates.fiber-mobile.fibra600.description.[0].subtitle }}
+                      {{ rates.fiber-mobile.fibra600.description.0.subtitle }}
                       <svg
                         class="ws10-c-card-rate__product-txt-icon"
                         xmlns="http://www.w3.org/2000/svg"
@@ -177,10 +194,10 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra600.description.[1].title }}
+                      {{ rates.fiber-mobile.fibra600.description.1.title }}
                     </p>
                     <p class="ws10-c-card-rate__product-txt">
-                      {{ rates.fiber-mobile.fibra600.description.[1].subtitle }}
+                      {{ rates.fiber-mobile.fibra600.description.1.subtitle }}
                     </p>
                   </div>
                 </li>
@@ -199,12 +216,29 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                         <p class="ws10-c-card-rate__product-title">
-                          {{ rates.fiber-mobile.fibra600.description.[2].title }}
+                          {{ rates.fiber-mobile.fibra600.description.2.title }}
                         </p>
                         <p class="ws10-c-card-rate__product-txt">
-                          {{ rates.fiber-mobile.fibra600.description.[2].subtitle }}
+                          {{ rates.fiber-mobile.fibra600.description.2.subtitle }}
                         </p>
                     </div>
+                  </div>
+                </li>
+                <li class="ws10-c-card-rate__product-info-item">
+                  <svg
+                    class="ws10-c-card-rate__product-icon ws10-u-color--black"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <use xlink:href="#icon-tv"></use>
+                  </svg>
+                  <div class="ws10-c-card-rate__product">
+                    <p class="ws10-c-card-rate__product-title">
+                      {{ rates.fiber-mobile.fibra600.description.3.title }}
+                    </p>
+                    <p class="ws10-c-card-rate__product-txt">
+                      {{ rates.fiber-mobile.fibra600.description.3.subtitle }}
+                    </p>
                   </div>
                 </li>
               </ul>
@@ -271,12 +305,12 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra600SerieFans.description.[0].title }}
+                      {{ rates.fiber-mobile.fibra600SerieFans.description.0.title }}
                     </p>
                     <p
                       class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary"
                     >
-                      {{ rates.fiber-mobile.fibra600SerieFans.description.[0].subtitle }}
+                      {{ rates.fiber-mobile.fibra600SerieFans.description.0.subtitle }}
                       <svg
                         class="ws10-c-card-rate__product-txt-icon"
                         xmlns="http://www.w3.org/2000/svg"
@@ -297,10 +331,10 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra600SerieFans.description.[1].title }}
+                      {{ rates.fiber-mobile.fibra600SerieFans.description.1.title }}
                     </p>
                     <p class="ws10-c-card-rate__product-txt">
-                      {{ rates.fiber-mobile.fibra600SerieFans.description.[1].subtitle }}
+                      {{ rates.fiber-mobile.fibra600SerieFans.description.1.subtitle }}
                     </p>
                   </div>
                 </li>
@@ -319,10 +353,10 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                         <p class="ws10-c-card-rate__product-title">
-                          {{ rates.fiber-mobile.fibra600SerieFans.description.[2].title }}
+                          {{ rates.fiber-mobile.fibra600SerieFans.description.2.title }}
                         </p>
                         <p class="ws10-c-card-rate__product-txt">
-                          {{ rates.fiber-mobile.fibra600SerieFans.description.[2].subtitle }}
+                          {{ rates.fiber-mobile.fibra600SerieFans.description.2.subtitle }}
                         </p>
                     </div>
                   </div>
@@ -337,10 +371,10 @@
                   </svg>
                   <div class="ws10-c-card-rate__product">
                     <p class="ws10-c-card-rate__product-title">
-                      {{ rates.fiber-mobile.fibra600SerieFans.description.[3].title }}
+                      {{ rates.fiber-mobile.fibra600SerieFans.description.3.title }}
                     </p>
                     <p class="ws10-c-card-rate__product-txt">
-                      {{ rates.fiber-mobile.fibra600SerieFans.description.[3].subtitle }}
+                      {{ rates.fiber-mobile.fibra600SerieFans.description.3.subtitle }}
                     </p>
                   </div>
                 </li>
