--- a/colectivos/ilimitada_avanzada_600/resources/templates/partials/mobile.hbs
+++ b/colectivos/ilimitada_avanzada_600/resources/templates/partials/mobile.hbs
@@ -3,7 +3,7 @@
     {{ mobile.title.[0] }}
   </p>
   <p class="ws10-u-heading--3">
-    {{ mobile.title.[1] }}
+    <strong>{{ mobile.title.[1] }}</strong>
   </p>
   <div class="vf-mobile__animation">
     <div class="vf-mobile__apps ws10-u--mt+">
