--- a/colectivos/ilimitada_avanzada_300/resources/templates/partials/no-surprises.hbs
+++ b/colectivos/ilimitada_avanzada_300/resources/templates/partials/no-surprises.hbs
@@ -18,6 +18,7 @@
     <span data-js-vf="_portability">
       Línea adicional: GRATIS durante 1 año, después con un 50% dto. por
       solo 17,50€/mes (dto. ya aplicado).</span>
+    <span>Paquete de TV: GRATIS</span>
   </p>
 
   <!----PRICE-TAB-->
