--- a/colectivos/ilimitada_avanzada_300/resources/templates/partials/no-surprises.hbs
+++ b/colectivos/ilimitada_avanzada_300/resources/templates/partials/no-surprises.hbs
@@ -19,6 +19,9 @@
       Línea adicional: GRATIS durante 1 año, después con un 50% dto. por
       solo 17,50€/mes (dto. ya aplicado).</span>
   </p>
+  <p class="ws10-flex ws10-flex__direction--column">
+      Paquete de TV: GRATIS
+  </p>
 
   <!----PRICE-TAB-->
 
