One PLP new changes

--- a/one/plp/resources/templates/partials/rate300.hbs
+++ b/one/plp/resources/templates/partials/rate300.hbs
@@ -53,6 +53,20 @@
                         </p>
                     </div>
                 </li>
+                <li class="ws10-c-card-rate__product-info-item">
+                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <use xlink:href="#icon-tv"></use>
+                    </svg>
+                    <div class="ws10-c-card-rate__product">
+                        <p class="ws10-c-card-rate__product-title">
+                            {{ rates.fibra300.description.[3].title }}
+                        </p>
+                        <p class="ws10-c-card-rate__product-txt">
+                            {{ rates.fibra300.description.[3].subtitle }}
+                        </p>
+                    </div>
+                </li>
             </ul>
             <div class="ws10-c-card-rate__w-cta">
                 <div class="ws10-c-card-rate__w-offers">
