--- a/one/plp/resources/templates/partials/banner.hbs
+++ b/one/plp/resources/templates/partials/banner.hbs
@@ -7,10 +7,11 @@
         <p
           class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner"
         >
-          <span>Disfruta de
-            <strong>2 líneas</strong>
-            y la fibra más rápida
-            <strong>con 50% dto. 3 meses.</strong></span>
+          <span>{{ banner.title.[0] }}
+            <strong>{{ banner.title.[1] }}</strong>
+            {{ banner.title.[2] }}
+            <strong>{{ banner.title.[3] }}</strong>
+          </span>
         </p>
       </div>
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
