One 300 / 600 New changes

--- a/one/ilimitada-avanzada-300/resources/templates/partials/movil.hbs
+++ b/one/ilimitada-avanzada-300/resources/templates/partials/movil.hbs
@@ -34,7 +34,7 @@
         height="24px"
       >
         <title>Icono Rayos</title>
-        <use class="icon-v3" xlink:href="{{ header-ticket.ticket.icon-velocidad }}"></use>
+        <use xlink:href="#icon-thunder-2grey"></use>
       </svg>
       <p class="ws10-c-product-detail__text">Datos ilimitados a
         <strong>alta velocidad ({{ movil.velocidad }}Mbps de bajada y de subida).</strong></p>
