--- a/one/ilimitada-avanzada-600/resources/templates/partials/sinsorpresas.hbs
+++ b/one/ilimitada-avanzada-600/resources/templates/partials/sinsorpresas.hbs
@@ -13,7 +13,10 @@
     <span>Otras promociones:</span>
     <span>Llévate el paquete de {{ fibra-movil }} al {{ header-ticket.title-1 }}</span>
     <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año,
-      después con un 50% dto. por solo 9,99€/mes (dto. ya aplicado).</span>
+      después con un 50% dto. por solo 17,50/mes (dto. ya aplicado).</span>
+  </p>
+  <p class="ws10-flex ws10-flex__direction--column">
+      Paquete de TV: GRATIS
   </p>
 
   <!----PRICE-TAB-->
