--- a/one/ilimitada-avanzada-300/resources/templates/partials/header-ticket.hbs
+++ b/one/ilimitada-avanzada-300/resources/templates/partials/header-ticket.hbs
@@ -53,20 +53,18 @@
 
                     <div class="ws10-c-card-rate__product">
                       <p class="ws10-c-card-rate__product-title">
-                        {{header-ticket.ticket.datos}}
+                        {{ header-ticket.description.0.title }}
                       </p>
                       <p
                         class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary"
                       >
-                        {{header-ticket.ticket.velocidad}}
+                        {{ header-ticket.description.0.subtitle }}
                         <svg
                           class="ws10-c-card-rate__product-txt-icon"
                           xmlns="http://www.w3.org/2000/svg"
                           xmlns:xlink="http://www.w3.org/1999/xlink"
                         >
-                          <use
-                            xlink:href="{{header-ticket.ticket.icon-velocidad}}"
-                          ></use>
+                          <use xlink:href="#icon-thunder-2grey"></use>
                         </svg>
                       </p>
                     </div>
@@ -84,10 +82,10 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                       <p class="ws10-c-card-rate__product-title">
-                        {{header-ticket.ticket.segundalinea}}
+                        {{ header-ticket.description.1.title }}
                       </p>
                       <p class="ws10-c-card-rate__product-txt">
-                        {{header-ticket.ticket.segundalinea_subtitle}}
+                        {{ header-ticket.description.1.subtitle }}
                       </p>
                     </div>
                   </li>
@@ -102,13 +100,26 @@
                     </svg>
                     <div class="ws10-c-card-rate__product">
                       <p class="ws10-c-card-rate__product-title">
-                        {{velocidad}}
-                        Fibra Óptica
+                        {{ header-ticket.description.2.title }}
                       </p>
                       <p class="ws10-c-card-rate__product-txt">
-                        {{header-ticket.ticket.velocidad_fibra_subtitle}}
+                        {{ header-ticket.description.2.subtitle }}
                       </p>
                     </div>
+                  </li>
+                  <li class="ws10-c-card-rate__product-info-item">
+                      <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
+                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <use xlink:href="#icon-tv"></use>
+                      </svg>
+                      <div class="ws10-c-card-rate__product">
+                          <p class="ws10-c-card-rate__product-title">
+                              {{ header-ticket.description.3.title }}
+                          </p>
+                          <p class="ws10-c-card-rate__product-txt">
+                              {{ header-ticket.description.3.subtitle }}
+                          </p>
+                      </div>
                   </li>
 
                 </ul>
