pelenaca: handelbar copy fix

--- a/Norte/plp/resources/templates/partials/banner.hbs
+++ b/Norte/plp/resources/templates/partials/banner.hbs
@@ -11,7 +11,8 @@
           class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--mt2x"
         >
 
-        <span>Llévate <strong> datos ilimitados + fibra óptica al 50% dto. 6 meses</strong></span>
+        <span>Llévate <strong> 2 líneas ilimitadas</strong> y fibra <strong> al 50% dto. 6 meses</strong></span>
+        
           
         </p>
       </div>
