--- a/Norte/plp/resources/templates/partials/rates.hbs
+++ b/Norte/plp/resources/templates/partials/rates.hbs
@@ -8,13 +8,6 @@
       >
         <div class="ws10-c-card-rate__w-rates">
           <div class="ws10-c-card-rate__a-rate">
-            <div class="vfms-badge--container">
-              <div>
-                <b
-                  class="ws10-c-badge-text ws10-c-badge-text--turquoise vfms-badge1"
-                >50% dto.</b>
-              </div>
-            </div>
             <ul
               class="ws10-c-card-rate__product-info"
               data-vfes-seo-empathy-promoperiod="50% dto. 6 meses Permanencia 1 año"
@@ -61,10 +54,10 @@
                 </svg>
                 <div class="ws10-c-card-rate__product">
                   <p class="ws10-c-card-rate__product-title">
-                    4GB y 200 minutos GRATIS
+                    Segunda línea GRATIS 1 año
                   </p>
                   <p class="ws10-c-card-rate__product-txt">
-                    segunda línea GRATIS 1 año
+                    Datos y minutos ilimitados
                   </p>
                 </div>
               </li>
@@ -79,12 +72,25 @@
                 </svg>
                 <div class="ws10-c-card-rate__product">
                   <p class="ws10-c-card-rate__product-title">
-                    Fibra Óptica 300Mbps</p>
+                    300Mbps Fibra Óptica</p>
                   <p class="ws10-c-card-rate__product-txt">
                     + llamadas ilimitadas en fijo
                   </p>
                 </div>
               </li>
+               <li class="ws10-c-card-rate__product-info-item">
+                  <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <use xlink:href="#icon-tv"></use>
+                  </svg>
+                  <div class="ws10-c-card-rate__product">
+                    <p class="ws10-c-card-rate__product-title">
+                      Pack TV Universal GRATIS
+                    </p>
+                    <p class="ws10-c-card-rate__product-txt" style="font-size: 17px;">
+                      con más de 30 canales internacionales
+                    </p>
+                  </div>
+                </li>
 
             </ul>
 
@@ -142,13 +148,6 @@
       >
         <div class="ws10-c-card-rate__w-rates">
           <div class="ws10-c-card-rate__a-rate">
-            <div class="vfms-badge--container">
-              <div>
-                <b
-                  class="ws10-c-badge-text ws10-c-badge-text--turquoise vfms-badge1"
-                >50% dto.</b>
-              </div>
-            </div>
             <ul
               class="ws10-c-card-rate__product-info"
               data-vfes-seo-empathy-promoperiod="50% dto. 6 meses Permanencia 1 año"
@@ -195,10 +194,10 @@
                 </svg>
                 <div class="ws10-c-card-rate__product">
                   <p class="ws10-c-card-rate__product-title">
-                    4GB y 200 minutos GRATIS
+                    Segunda línea GRATIS 1 año
                   </p>
                   <p class="ws10-c-card-rate__product-txt">
-                    segunda línea GRATIS 1 año
+                    Datos y minutos ilimitados
                   </p>
                 </div>
               </li>
@@ -213,12 +212,25 @@
                 </svg>
                 <div class="ws10-c-card-rate__product">
                   <p class="ws10-c-card-rate__product-title">
-                    Fibra Óptica 600Mbps</p>
+                    600Mbps Fibra Óptica</p>
                   <p class="ws10-c-card-rate__product-txt">
                     + llamadas ilimitadas en fijo
                   </p>
                 </div>
               </li>
+               <li class="ws10-c-card-rate__product-info-item">
+                  <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <use xlink:href="#icon-tv"></use>
+                  </svg>
+                  <div class="ws10-c-card-rate__product">
+                    <p class="ws10-c-card-rate__product-title">
+                      Pack TV Universal GRATIS
+                    </p>
+                    <p class="ws10-c-card-rate__product-txt" style="font-size: 17px;">
+                      con más de 30 canales internacionales
+                    </p>
+                  </div>
+                </li>
 
             </ul>
 
@@ -276,13 +288,6 @@
       >
         <div class="ws10-c-card-rate__w-rates">
           <div class="ws10-c-card-rate__a-rate">
-            <div class="vfms-badge--container">
-              <div>
-                <b
-                  class="ws10-c-badge-text ws10-c-badge-text--turquoise vfms-badge1"
-                >50% dto.</b>
-              </div>
-            </div>
             <ul
               class="ws10-c-card-rate__product-info"
               data-vfes-seo-empathy-promoperiod="50% dto. 6 meses Permanencia 1 año"
@@ -329,10 +334,10 @@
                 </svg>
                 <div class="ws10-c-card-rate__product">
                   <p class="ws10-c-card-rate__product-title">
-                    4GB y 200 minutos GRATIS
+                    Segunda línea GRATIS 1 año
                   </p>
                   <p class="ws10-c-card-rate__product-txt">
-                    segunda línea GRATIS 1 año
+                    Datos y minutos ilimitados
                   </p>
                 </div>
               </li>
@@ -347,11 +352,10 @@
                 </svg>
                 <div class="ws10-c-card-rate__product">
                   <p class="ws10-c-card-rate__product-title">
-                    Fibra Óptica 600Mbps</p>
+                    600Mbps Fibra Óptica</p>
                   <p class="ws10-c-card-rate__product-txt">
                     + llamadas ilimitadas en fijo
                   </p>
-                </div>
               </li>
               <li class="ws10-c-card-rate__product-info-item">
                 <svg
