--- a/one/ilimitada-avanzada-300/resources/templates/partials/sinsorpresas.hbs
+++ b/one/ilimitada-avanzada-300/resources/templates/partials/sinsorpresas.hbs
@@ -14,9 +14,7 @@
     <span>Llévate el paquete de {{ fibra-movil }} al {{ header-ticket.title-1 }}</span>
     <span data-js-vf="_portability">Línea adicional: GRATIS durante 1 año,
       después con un 50% dto. por solo 17,50€/mes (dto. ya aplicado).</span>
-  </p>
-  <p class="ws10-flex ws10-flex__direction--column">
-      Paquete de TV: GRATIS
+    <span>Paquete de TV: GRATIS</span>
   </p>
 
   <!----PRICE-TAB-->
