--- a/one/ilimitada-avanzada-600/resources/templates/partials/header-ticket.hbs
+++ b/one/ilimitada-avanzada-600/resources/templates/partials/header-ticket.hbs
@@ -55,20 +55,18 @@
 
                     <div class="ws10-c-card-rate__product">
                       <p class="ws10-c-card-rate__product-title">
-                        {{header-ticket.ticket.datos}}
+                        {{ header-ticket.description.0.title }}
                       </p>
                       <p
                         class="ws10-c-card-rate__product-txt ws10-c-card-rate__product-txt--primary"
                       >
-                        {{header-ticket.ticket.velocidad}}
+                        {{ header-ticket.description.0.subtitle }}
                         <svg
                           class="ws10-c-card-rate__product-txt-icon"
                           xmlns="http://www.w3.org/2000/svg"
                           xmlns:xlink="http://www.w3.org/1999/xlink"
                         >
-                          <use
-                            xlink:href="{{header-ticket.ticket.icon-velocidad}}"
-                          ></use>
+                          <use xlink:href="#icon-thunder-2grey"></use>
                         </svg>
                       </p>
                     </div>
@@ -85,12 +83,12 @@
                       <use xlink:href="#icon-sim"></use>
                     </svg>
                     <div class="ws10-c-card-rate__product">
-                      <p class="ws10-c-card-rate__product-title">
-                        {{header-ticket.ticket.segundalinea}}
-                      </p>
-                      <p class="ws10-c-card-rate__product-txt">
-                        {{header-ticket.ticket.segundalinea_subtitle}}
-                      </p>
+                        <p class="ws10-c-card-rate__product-title">
+                          {{ header-ticket.description.1.title }}
+                        </p>
+                        <p class="ws10-c-card-rate__product-txt">
+                          {{ header-ticket.description.1.subtitle }}
+                        </p>
                     </div>
                   </li>
                   <li class="ws10-c-card-rate__product-info-item">
@@ -103,16 +101,28 @@
                       <use xlink:href="#icon-broadband-or-wifi"></use>
                     </svg>
                     <div class="ws10-c-card-rate__product">
-                      <p class="ws10-c-card-rate__product-title">
-                        {{velocidad}}
-                        Fibra Óptica
-                      </p>
-                      <p class="ws10-c-card-rate__product-txt">
-                        {{header-ticket.ticket.velocidad_fibra_subtitle}}
-                      </p>
+                        <p class="ws10-c-card-rate__product-title">
+                          {{ header-ticket.description.2.title }}
+                        </p>
+                        <p class="ws10-c-card-rate__product-txt">
+                          {{ header-ticket.description.2.subtitle }}
+                        </p>
                     </div>
                   </li>
-
+                  <li class="ws10-c-card-rate__product-info-item">
+                      <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
+                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                          <use xlink:href="#icon-tv"></use>
+                      </svg>
+                      <div class="ws10-c-card-rate__product">
+                          <p class="ws10-c-card-rate__product-title">
+                              {{ header-ticket.description.3.title }}
+                          </p>
+                          <p class="ws10-c-card-rate__product-txt">
+                              {{ header-ticket.description.3.subtitle }}
+                          </p>
+                      </div>
+                  </li>
                 </ul>
 
                 <form
