--- a/one/ilimitada-plus-600/resources/templates/partials/movil.hbs
+++ b/one/ilimitada-plus-600/resources/templates/partials/movil.hbs
@@ -34,7 +34,7 @@
         height="24px"
       >
         <title>Icono Rayos</title>
-        <use class="icon-v3" xlink:href="{{ header-ticket.ticket.icon-velocidad }}"></use>
+        <use xlink:href="#icon-thunder-3"></use>
       </svg>
       <p class="ws10-c-product-detail__text">Datos ilimitados a
         <strong>máxima velocidad ({{ movil.velocidad }} de bajada y de subida).</strong></p>
