pelenaca: jumanji plp ok

--- a/jumanji/plp/resources/templates/partials/addons.hbs
+++ b/jumanji/plp/resources/templates/partials/addons.hbs
@@ -30,11 +30,7 @@
           >¡Nuevo!</b>
           <h4 class="ws10-u-heading--2-lt ws10-u--pt5x">¿Necesitas más líneas?
             Ahora llegan las tarifas para familias</h4>
-          <p class="ws10-u--body">Descubre las tarifas de Hogar ilimitable y
-            disfruta de datos y minutos ilimitados en todas tus líneas de móvil
-            con 5G, la mejor fibra de Vodafone, máxima conexión WiFi con Super
-            WiFi, una extensa selección de cine y series con HBO España y Amazon
-            Prime y la seguridad que necesita tu familia.</p>
+          <p class="ws10-u--body">Descubre las tarifas de Hogar ilimitable y disfruta de datos y minutos ilimitados en todas tus líneas de móvil con 5G, la mejor fibra de Vodafone, máxima conexión WiFi con Super WiFi, una extensa selección de cine y series con HBO España y Amazon Prime y la seguridad que necesita tu familia.</p>
 
           <a
             class="ws10-c-link-chevron ws10-c-link-chevron--primary"
@@ -115,7 +111,7 @@
     >
       <div class="ws10-c-cards-discovery-standard__text-content">
         <h3 class="ws10-u-heading--4-lt">Tarifas de
-          <strong>fibra y móviles</strong>
+          fibra y móviles
           para jóvenes
           <strong>Vodafone YU!</strong>
           Hazte yuser.
