--- a/jumanji/plp/resources/templates/partials/banner.hbs
+++ b/jumanji/plp/resources/templates/partials/banner.hbs
@@ -7,10 +7,10 @@
         <p
           class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner"
         >
-          <span>Disfruta de
-            <strong>2 líneas</strong>
-            y la fibra más rápida
-            <strong>con 50% dto. 3 meses.</strong></span>
+          <span>Llévate
+            <strong>2 líneas ilimitadas + fibra</strong>
+            con hasta
+            <strong> 30% dto. durante 1 año</strong></span>
         </p>
       </div>
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
@@ -25,7 +25,7 @@
             srcset="img/bodegon-desktop.png"
             type="image/png"
           />
-          <source srcset="img/bodegon-mobile.webp" type="image/webp" />
+          <source srcset="img/bodegon-desktop.webp" type="image/webp" />
           <img src="img/bodegon-desktop.png" />
         </picture>
       </div>
