pelenaca: shadow + scrollTitle Norte

--- a/Norte/ilimitada_avanzada_300/resources/templates/index.hbs
+++ b/Norte/ilimitada_avanzada_300/resources/templates/index.hbs
@@ -64,10 +64,10 @@ utag_data.plans_add2cart = [
                             src="img/banner/icono-bestprice.svg"><span>Mejor Precio Vodafone</span></span>
 
                 </div>
+                <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">Vodafone One Ilimitada Avanzada 300Mbps</h2>
                 <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" data-js-vf="_ticket">
                     <div class="vf-ticket__floating">
-                        <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt">Vodafone One Ilimitada Avanzada 300Mbps</h2>
-                        <section class="ws10-c-card ws10-c-card-rate" data-ws10-js="card-rate">
+                        <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
                             <div class="ws10-c-card-rate__w-rates">
                                 <div class="ws10-c-card-rate__a-rate">
                                     <ul class="ws10-c-card-rate__product-info"
