--- a/colectivos/ilimitada_avanzada_300/resources/styles/_micro.scss
+++ b/colectivos/ilimitada_avanzada_300/resources/styles/_micro.scss
@@ -97,7 +97,7 @@
   .ws10-c-form__radio:checked+.ws10-c-form__label::after {
     background-color: #007c92;
   }
-  
+
   .wfms__legal{
     font-size: 14px;
   }
@@ -112,11 +112,12 @@
   .vf-banner{
     position: relative;
     background-image: url("../img/banner/bg-banner-mv.jpg");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     @media screen and (min-width: 970px) {
       background-image: url("../img/banner/bg-banner-desktop.jpg");
       background-attachment: fixed;
+      background-size: cover;
       background-position-y: -150px;
     }
     &__textcontainer {
