--- a/colectivos/ilimitada_plus_600/resources/styles/_micro.scss
+++ b/colectivos/ilimitada_plus_600/resources/styles/_micro.scss
@@ -120,11 +120,12 @@
   .vf-banner {
     position: relative;
     background-image: url("../img/banner/bg-banner-mv.jpg");
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     @media screen and (min-width: 970px) {
       background-image: url("../img/banner/bg-banner-desktop.jpg");
       background-attachment: fixed;
+      background-size: cover;
       background-position-y: -150px;
     }
 
