Colectivos fix <br>

--- a/colectivos/ilimitada_avanzada_300/resources/templates/partials/banner.hbs
+++ b/colectivos/ilimitada_avanzada_300/resources/templates/partials/banner.hbs
@@ -6,7 +6,7 @@
       >
         <span class="ws10-u-heading--4">
           {{banner.heading.[0]}}
-          <strong>{{banner.heading.[1]}}<br />{{banner.heading.[2]}}</strong>
+          <strong>{{banner.heading.[1]}} {{banner.heading.[2]}}</strong>
         </span>
         <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
           {{banner.heading2}}
