analitica padres mayores y norte
Signed-off-by: allwars <Klaus008.LL>

--- a/Norte/ilimitada_avanzada_300/resources/templates/index.hbs
+++ b/Norte/ilimitada_avanzada_300/resources/templates/index.hbs
@@ -154,7 +154,7 @@ utag_data.plans_add2cart = [
                                                     data-analytics-id="-6727639503211">
                                                     <input type="radio" name="rate-1-card-rate"
                                                         id="rate-1-card-rate-option-1" class="ws10-c-form__radio"
-                                                        data-analytics-element="modulo superior tarifa"
+                                                        data-analytics-element="cardrate"
                                                         data-analytics-context="portabilidad"
                                                         data-analytics-category="cta" checked>
                                                     <label for="rate-1-card-rate-option-1"
@@ -169,7 +169,7 @@ utag_data.plans_add2cart = [
                                                     data-analytics-id="-6727909503211">
                                                     <input type="radio" name="rate-1-card-rate"
                                                         id="rate-1-card-rate-option-2" class="ws10-c-form__radio"
-                                                        data-analytics-element="modulo superior tarifa"
+                                                        data-analytics-element="cardrate"
                                                         data-analytics-context="alta nueva"
                                                         data-analytics-category="cta">
                                                     <label for="rate-1-card-rate-option-2"
@@ -201,8 +201,8 @@ utag_data.plans_add2cart = [
                                                     type="submit" name="cta" title="CTA"
                                                     onmousedown="addtocart(utag_data.plans_add2cart[0])"
                                                     class="ws10-c-button ws10-c-button--auto"
-                                                    data-analytics-context="lo quiero"
-                                                    data-analytics-element="modulo superior tarifa"
+                                                    data-analytics-context="vodafone one ilimitada avanzada 300mbps"
+                                                   data-analytics-element="cardrate"
                                                     data-analytics-category="cta" data-analytics-id="-4725875160583">
                                                     Lo quiero
                                                 </a>
@@ -227,8 +227,8 @@ utag_data.plans_add2cart = [
                                                 <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285753&tcli=0&tta=1"
                                                     type="submit" name="cta" title="CTA"
                                                     class="ws10-c-button ws10-c-button--auto"
-                                                    data-analytics-element="modulo superior tarifa"
-                                                    data-analytics-context="lo quiero" data-analytics-category="cta"
+                                                    data-analytics-element="cardrate"
+                                                    data-analytics-context="vodafone one ilimitada avanzada 300mbps" data-analytics-category="cta"
                                                     data-analytics-id="-4545656976521"
                                                     onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
@@ -726,7 +726,7 @@ utag_data.plans_add2cart = [
                     <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285772&tcli=0&tta=1"
                         type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])"
                         class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior"
-                        data-analytics-context="lo quiero" data-analytics-category="cta"
+                        data-analytics-context="vodafone one ilimitada avanzada 300mbps" data-analytics-category="cta"
                         data-analytics-id="-4725875160585">
                         Lo quiero
                     </a>
@@ -741,7 +741,7 @@ utag_data.plans_add2cart = [
                     </div>
                     <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285753&tcli=0&tta=1 "
                         type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto"
-                        data-analytics-element="stiky inferior" data-analytics-context="lo quiero"
+                        data-analytics-element="stiky inferior" data-analytics-context="vodafone one ilimitada avanzada 300mbps"
                         data-analytics-category="cta" data-analytics-id="-4545656976523"
                         onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
