--- a/Norte/ilimitada_plus_600/resources/templates/index.hbs
+++ b/Norte/ilimitada_plus_600/resources/templates/index.hbs
@@ -159,7 +159,7 @@ utag_data.plans_add2cart = [
                                                     data-analytics-id="-6727639503211">
                                                     <input type="radio" name="rate-1-card-rate"
                                                         id="rate-1-card-rate-option-1" class="ws10-c-form__radio"
-                                                        data-analytics-element="modulo superior tarifa"
+                                                        data-analytics-element="cardrate"
                                                         data-analytics-context="portabilidad"
                                                         data-analytics-category="cta" checked>
                                                     <label for="rate-1-card-rate-option-1"
@@ -174,7 +174,7 @@ utag_data.plans_add2cart = [
                                                     data-analytics-id="-6727909503211">
                                                     <input type="radio" name="rate-1-card-rate"
                                                         id="rate-1-card-rate-option-2" class="ws10-c-form__radio"
-                                                        data-analytics-element="modulo superior tarifa"
+                                                        data-analytics-element="cardrate"
                                                         data-analytics-context="alta nueva"
                                                         data-analytics-category="cta">
                                                     <label for="rate-1-card-rate-option-2"
@@ -206,8 +206,8 @@ utag_data.plans_add2cart = [
                                                     type="submit" name="cta" title="CTA"
                                                     onmousedown="addtocart(utag_data.plans_add2cart[0])"
                                                     class="ws10-c-button ws10-c-button--auto"
-                                                    data-analytics-context="lo quiero"
-                                                    data-analytics-element="modulo superior tarifa"
+                                                    data-analytics-context="vodafone one ilimitada plus 600 mbps"
+                                                    data-analytics-element="cardrate"
                                                     data-analytics-category="cta" data-analytics-id="-4725875160583">
                                                     Lo quiero
                                                 </a>
@@ -232,8 +232,8 @@ utag_data.plans_add2cart = [
                                                 <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1223947&tcli=0&tta=1"
                                                     type="submit" name="cta" title="CTA"
                                                     class="ws10-c-button ws10-c-button--auto"
-                                                    data-analytics-element="modulo superior tarifa"
-                                                    data-analytics-context="lo quiero" data-analytics-category="cta"
+                                                    data-analytics-element="cardrate"
+                                                    data-analytics-context="vodafone one ilimitada plus 600 mbps" data-analytics-category="cta"
                                                     data-analytics-id="-4545656976521"
                                                     onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
@@ -924,7 +924,7 @@ utag_data.plans_add2cart = [
                     <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285761&tcli=0&tta=1"
                         type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])"
                         class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior"
-                        data-analytics-context="lo quiero" data-analytics-category="cta"
+                        data-analytics-context="vodafone one ilimitada plus 600 mbps" data-analytics-category="cta"
                         data-analytics-id="-4725875160585">
                         Lo quiero
                     </a>
@@ -939,7 +939,7 @@ utag_data.plans_add2cart = [
                     </div>
                     <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1223947&tcli=0&tta=1 "
                         type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto"
-                        data-analytics-element="stiky inferior" data-analytics-context="lo quiero"
+                        data-analytics-element="stiky inferior" data-analytics-context="vodafone one ilimitada plus 600 mbps"
                         data-analytics-category="cta" data-analytics-id="-4545656976523"
                         onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
