--- a/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
+++ b/Norte/ilimitada_avanzada_600/resources/templates/index.hbs
@@ -149,7 +149,7 @@ utag_data.plans_add2cart = [
                         <div class="vf-form__box ws10-c-form__box" data-analytics-category="cta"
                           data-analytics-id="-6727639503211">
                           <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1"
-                            class="ws10-c-form__radio" data-analytics-element="modulo superior tarifa"
+                            class="ws10-c-form__radio" data-analytics-element="cardrate"
                             data-analytics-context="portabilidad" data-analytics-category="cta" checked />
                           <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label"
                             data-js-vf="_buttonTypeLine">
@@ -160,7 +160,7 @@ utag_data.plans_add2cart = [
                           data-analytics-element="modulo superior ilimitada maxi" data-analytics-context="alta nueva"
                           data-analytics-id="-6727909503211">
                           <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2"
-                            class="ws10-c-form__radio" data-analytics-element="modulo superior tarifa"
+                            class="ws10-c-form__radio" data-analytics-element="cardrate"
                             data-analytics-context="alta nueva" data-analytics-category="cta" />
                           <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label"
                             data-js-vf="_buttonTypeLine" data-js-vf-value="newNumber">Nuevo Número</label>
@@ -187,8 +187,8 @@ utag_data.plans_add2cart = [
                         </div>
                         <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285841&tcli=0&tta=1"
                           type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])"
-                          class="ws10-c-button ws10-c-button--auto" data-analytics-context="lo quiero"
-                          data-analytics-element="modulo superior tarifa" data-analytics-category="cta"
+                          class="ws10-c-button ws10-c-button--auto" data-analytics-context="vodafone one ilimitada avanzada 600mbps"
+                          data-analytics-element="cardrate" data-analytics-category="cta"
                           data-analytics-id="-4725875160583">
                           Lo quiero
                         </a>
@@ -212,7 +212,7 @@ utag_data.plans_add2cart = [
                         </div>
                         <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285759&tcli=0&tta=1"
                           type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto"
-                          data-analytics-element="modulo superior tarifa" data-analytics-context="lo quiero"
+                          data-analytics-element="cardrate" data-analytics-context="vodafone one ilimitada avanzada 600mbps"
                           data-analytics-category="cta" data-analytics-id="-4545656976521"
                           onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
@@ -389,7 +389,7 @@ utag_data.plans_add2cart = [
             <p class="ws10-c-logo-list__w-show-all">
               <a class="ws10-c-logo-list__show-all vfms-link" data-backdrop="TvUniversal600" data-backdrop-close
                 aria-haspopup="dialog" data-analytics-context="modulo inferior tv"
-                data-analytics-element="ver todos los canales incluidos" data-analytics-category="cta"
+                data-analytics-element="cardrate" data-analytics-category="cta"
                 data-analytics-id="-0003391249299">
                 Ver todos los canales incluidos
               </a>
@@ -632,7 +632,7 @@ utag_data.plans_add2cart = [
 
           <a class="ws10-c-link-chevron ws10-c-link-chevron--primary" target="_blank"
             href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/legales/alt/n/"
-            data-analytics-element="modulo inferior" data-analytics-context="condiciones legales"
+            data-analytics-element="cardaddons" data-analytics-context="condiciones legales"
             data-analytics-category="cta" data-analytics-id="-5460257368589">
             Ver condiciones legales
             <span class="ws10-u--hidden-visually"> color #E60000</span>
@@ -724,7 +724,7 @@ utag_data.plans_add2cart = [
           <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285841&tcli=0&tta=1"
             type="submit" name="cta" title="CTA" onmousedown="addtocart(utag_data.plans_add2cart[0])"
             class="ws10-c-button ws10-c-button--auto" data-analytics-element="stiky inferior"
-            data-analytics-context="lo quiero" data-analytics-category="cta" data-analytics-id="-4725875160585">
+            data-analytics-context="vodafone one ilimitada avanzada 600mbps" data-analytics-category="cta" data-analytics-id="-4725875160585">
             Lo quiero
           </a>
         </div>
@@ -738,7 +738,7 @@ utag_data.plans_add2cart = [
           </div>
           <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285759&tcli=0&tta=1 "
             type="submit" name="cta" title="CTA" class="ws10-c-button ws10-c-button--auto"
-            data-analytics-element="stiky inferior" data-analytics-context="lo quiero" data-analytics-category="cta"
+            data-analytics-element="stiky inferior" data-analytics-context="vodafone one ilimitada avanzada 600mbps" data-analytics-category="cta"
             data-analytics-id="-4545656976523" onmousedown="addtocart(utag_data.plans_add2cart[1])">
 
             Lo quiero
